ElfChat 6.0.0 BETA 3,
--------------------------------
- Upgrade system
- Add is_chat_open config option
- Fix magic quotes error
- Fix IP detection

ElfChat 6.0.0 BETA 2, 2014-06-25
--------------------------------
- Plugin system
- Theme system
- View hooks system
- Api integration
- Flood control
- Mobile version
- Message color plugin
- Example plugin
- Error pages
- Add mobile config
- Add ban IP detection
- Add "Show online users" in mobile
- Fix FireFox box-sizing
- Fix old avatar removal
- Fix guest login

ElfChat 6.0.0 BETA 1, 2014-04-19
--------------------------------
- Initial release