@@ -1,7 +1,0 @@
-<?php
-/**
- * Message Color Plugin Controller
- *
- * @var $app \ElfChat\Application
- * @var $plugin \Silex\ControllerCollection
- */
