@@ -2,6 +2,7 @@ ElfChat 6.0.0 BETA 3,
 --------------------------------
 - Upgrade system
 - Add is_chat_open config option
+- Refactor hooks system
 - Fix magic quotes error
 - Fix IP detection
 
